--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@prisma/client": "^7.0.1",
     "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.4.5",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
