--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "next": "16.0.3",
+    "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "socket.io": "^4.8.1",
