--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "reto",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint",
-    "story:build": "node scripts/story_excel_to_json.cjs",
-    "normalize:chars": "node scripts/normalize-story-chars.js"
-  },
+"scripts": {
+  "dev": "next dev",
+  "build": "next build --webpack",
+  "start": "next start",
+  "lint": "eslint",
+  "story:build": "node scripts/story_excel_to_json.cjs",
+  "normalize:chars": "node scripts/normalize-story-chars.js"
+},
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@prisma/client": "^7.0.1",
     "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.4.5",
